[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
indexmap = { version = "2.1.0", features = [] }
num = "0.4.1"
array2d = "0.3.1"
enum-iterator = "1.4.1"
itertools = "0.12.0"
tqdm = "0.6.0"
